--- a/Makefile.in.icc
+++ b/Makefile.in.icc
@@ -2,7 +2,7 @@ CXX=icpc
 CXXFLAGS=-std=c++14 -g -openmp
 
 # If you're using icc, these are good flags to try
-OPTFLAGS=-O3 -no-prec-div -xcore-avx2 -ipo \
+OPTFLAGS=-O3 -no-prec-div -xcore-avx2 -ipo -ansi-alias\
 	-qopt-report=5 -qopt-report-phase=vec
 
 CXXFLAGS+=$(OPTFLAGS)
